--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 scale=1.0">
 
 <title>Implementação</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header class="cabecalho">
 <div class="container">
-<img src="IMG/Logo.svg" alt="logotipo"
+<img src="img/Logo.svg" alt="logotipo"
 
 class="container__imagem">
 
