--- a/index.html
+++ b/index.html
@@ -2,27 +2,21 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
-
 <meta name="viewport" content="width=device-width, initial-
 scale=1.0">
-
 <title>Implementação</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header class="cabecalho">
 <div class="container">
-<img src="img/Logo.svg" alt="logotipo"
-
-class="container__imagem">
+<img src="img/Logo.svg" alt="logotipo" class="container__imagem">
 
 <h1 class="container__titulo">
 Biblioteca Start
 </h1>
 <p class="container__frase">
-"Aqui cada livro é um <i>start</i> para o seu
-
-conhecimento!"</p>
+    "Aqui cada livro é um <i>start</i> para o seuconhecimento!"</p>
 </div>
 </header>
 </body>
