--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-
-scale=1.0">
-<title>Implementação</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<title>Inicio</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +16,8 @@ scale=1.0">
 Biblioteca Start
 </h1>
 <p class="container__frase">
-    "Aqui cada livro é um <i>start</i> para o seuconhecimento!"</p>
+  AAAAAAAAAAA
+</p>
 </div>
 </header>
 </body>
